# openrelik-workers

workers/openrelik-worker-timesketch/: pyproject.toml
workers/openrelik-worker-timesketch/src/: tasks.py
workers/openrelik-worker-yara/: README.md
workers/openrelik-worker-yara/src/: tasks.py
