[project]
name = "openrelik-worker-timesketch"
version = "0.3.0"
description = "Interact with Timesketch"
authors = [{ name = "Johan Berggren", email = "jberggren@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17",
    "timesketch-api-client>=20260311",
    "timesketch-import-client>=20230721",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
